Replace RestTemplate with Feign

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.username=jen
 spring.datasource.password=sideproject123
 
 alphavantage.url=https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol=%s&outputsize=full&apikey=%s
+alphavantage.feign.url=https://www.alphavantage.co
 alphavantage.api_key=KB7DSCK48G00WIRE
